# xmi_to_midi

./: .gitignore  CMakeLists.txt  README.md  file.cpp  file.h  main.cpp  wasm.cpp  xmi.cpp  xmi.h
examples/: index.html  node.js  package.json
